automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "cities."
+    "cities"
    ]
   },
   {
@@ -384,6 +384,15 @@
    "metadata": {},
    "source": [
     "Now calculate the number of cities in the list and assign the number to the variable `city_count`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c"
    ]
   },
   {
