--- a/index.ipynb
+++ b/index.ipynb
@@ -388,50 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
-       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 13591863,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Los Cabos',\n",
-       "  'Country': 'Mexico',\n",
-       "  'Population': 287651,\n",
-       "  'Area': 3750},\n",
-       " {'City': 'Walla Walla Valley',\n",
-       "  'Country': 'USA',\n",
-       "  'Population': 32237,\n",
-       "  'Area': 33},\n",
-       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
-       " {'City': 'Albuquerque',\n",
-       "  'Country': 'New Mexico',\n",
-       "  'Population': 559277,\n",
-       "  'Area': 491},\n",
-       " {'City': 'Archipelago Sea',\n",
-       "  'Country': 'Finland',\n",
-       "  'Population': 60000,\n",
-       "  'Area': 8300},\n",
-       " {'City': 'Iguazu Falls',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 0,\n",
-       "  'Area': 672},\n",
-       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 630, 'Area': 2731571}]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'keys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-649af90d1022>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'keys' is not defined"
+     ]
     }
    ],
    "source": [
-    "cities[0:11]"
+    "keys(cities)"
    ]
   },
   {
