automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,23 +388,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['City']"
+       "'City'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "['City']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
