automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,21 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'City'"
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "salina"
+   ]
   },
   {
    "cell_type": "code",
