automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,22 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function list.count>"
+       "12"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lenlist(cities[0:12])"
+    "len(list(cities[0:12]))"
    ]
   },
   {
