--- a/index.ipynb
+++ b/index.ipynb
@@ -422,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[11]['City'] = 'Pyeong'\n",
+    "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
