automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,6 +450,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pyeongchang_values = cities[11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "pyeongchang_values = cities[11]\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
