--- a/index.ipynb
+++ b/index.ipynb
@@ -446,11 +446,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'PyeongChang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 2581000,\n",
+       " 'Area': 3194}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pyeongchang_values = cities[11]"
+    "pyeongchang_values = cities[11]\n",
+    "pyeongchang_values"
    ]
   },
   {
