--- a/index.ipynb
+++ b/index.ipynb
@@ -446,23 +446,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'value'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-56-c1173df19b69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpyeongchang_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpyeongchang_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'value'"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_values(['PyeongChang', 'South Korea', 2581000, 3194])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = cities[11].value()\n",
+    "pyeongchang_values = cities[11].values()\n",
     "\n",
     "pyeongchang_values"
    ]
@@ -484,7 +483,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = value(cities[11])\n",
+    "pyeongchang_values = \n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
