automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,20 +446,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-60-07917fe2f42b>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-07917fe2f42b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    pyeongchang_values\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['PyeongChang', 'South Korea', 2581000, 3194]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities[11].values()\n",
+    "pyeongchang_values = list(cities[11].values())\n",
     "\n",
     "pyeongchang_values"
    ]
@@ -481,7 +483,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = \n",
+    "pyeongchang_values = list(cities[11].values())\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
