automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -468,16 +468,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict"
+       "list"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
