--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -477,14 +477,15 @@
        "list"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pyeongchang_values = list(cities[11].values())\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
+    "pyeongchang_values\n",
+    "# ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
    ]
   },
@@ -501,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = list(cities[11].)\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
