--- a/index.ipynb
+++ b/index.ipynb
@@ -521,6 +521,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['City', 'Country', 'Population', 'Area']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyeongchang_keys"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
