automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -399,13 +399,13 @@
        "12"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_count = len(list(cities[0:12]))\n",
+    "city_count = len(list(cities))\n",
     "city_count # 12"
    ]
   },
